--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Web Framework
-Flask==3.0.0
+Flask==3.0.2
 
 # HTTP Client for API requests
 requests==2.31.0
@@ -21,3 +21,8 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 coverage==7.4.1
+
+# for caching the data
+minio==7.2.3
+apscheduler==3.10.4
+redis==5.0.1
